# finvero

backend/: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/application/use_cases/: create_task_use_case.py  delete_use_case.py  get_tasks_use_case.py  update_task_use_case.py
backend/domain/adapters/: dependencies.py
backend/domain/entities/: task_schema.py
backend/infrastructure/config/: init_server.py  settings.py
backend/infrastructure/config/db/: mongo_connection.py
backend/infrastructure/repositories/: task_repository.py
backend/presentation/dtos/: task_dto.py  update_task_dto.py
backend/presentation/dtos/utils/: partial_mode.py  validation_mongo_id.py
backend/presentation/models/: tasks_response_model.py
backend/presentation/routers/: task_router.py
backend/presentation/vo/: task_vo.py
backend/test/: conftest.py  test_task_router.py
finvero-front/: index.html  package-lock.json  package.json
finvero-front/src/: App.tsx
finvero-front/src/components/: card-task.tsx  form-task.tsx  todo-list.tsx
finvero-front/src/interfaces/: task.interface.ts
